@@ -1,3 +1,8 @@
+2005-07-28  Owen Taylor  <otaylor@redhat.com>
+
+	* configure.in Makefile.am: Skip tests/ directory if
+	libpng was disabled. (#3423, reported by Steve Chaplin)
+
 2005-07-28  Carl Worth  <cworth@cworth.org>
 
 	* src/cairo-png.c: (read_png),
